以太口添加单选框标识

--- a/interface/vlan.html
+++ b/interface/vlan.html
@@ -40,6 +40,7 @@
             color: #FA8E53;
             background-color: #007FFF;
         }
+
         .table-hover>tbody>tr:hover {
             background-color: #33ccff;
         }
@@ -221,7 +222,7 @@
         var ethPortSet = [];
         var trunkSet = [];
         var statusArray = ["down", "up"];
-        var typeArray = ["N/A","Static","Dynamic"];
+        var typeArray = ["N/A", "Static", "Dynamic"];
         //多选下拉框所在的div
         var ethDiv = document.getElementById("selectEthDiv");
         var trunkDIv = document.getElementById("selectTrunkDiv");
@@ -245,7 +246,7 @@
         function getData() {
             //模拟数据
             for (var i = 0; i < 4096; i++) {
-                dataset.push(["vlan" + (i + 1), (i%2+ 1), "test vlan" + (i + 1), statusArray[i % 2], "eth0/0,eth0/1", "trunk1"]);
+                dataset.push(["vlan" + (i + 1), (i % 2 + 1), "test vlan" + (i + 1), statusArray[i % 2], "eth0/0-U,eth0/1-T", "trunk1"]);
             }
             totalNum = dataset.length;
             if (totalNum / pageSize > parseInt(totalNum / pageSize)) {
@@ -287,7 +288,7 @@
                 for (var i = 0; i < count; i++) {
                     html += ('<tr>');
                     html += ('<td id="row1" name="txtVlanName" value="' + pageDataSet[i][0] + '">' + pageDataSet[i][0] + '</td>');
-                    html += ('<td><span name="txtVlanId" value="' + pageDataSet[i][1] + '">' +typeArray[pageDataSet[i][1]] + '</span></td>');
+                    html += ('<td><span name="txtVlanId" value="' + pageDataSet[i][1] + '">' + typeArray[pageDataSet[i][1]] + '</span></td>');
                     html += ('<td><span name="txtVlanDes" value="' + pageDataSet[i][2] + '">' + pageDataSet[i][2] + '</span></td>');
                     html += ('<td><span name="txtVlanStatus" value="' + pageDataSet[i][3] + '">' + pageDataSet[i][3] + '</span></td>');
                     html += ('<td><span name="txtEthGroup" value="' + pageDataSet[i][4] + '">' + pageDataSet[i][4] + '</span></td>');
@@ -353,8 +354,33 @@
                 tmplabel.setAttribute("name", "ethChecklabel");
                 tmplabel.innerHTML = ethPortSet[i];
                 tmplabel.setAttribute("class", "mark");
+                //加载单选框
+                var tmplabel2 = document.createElement("label");
+                var tmpinput2 = document.createElement("input");
+                tmpinput2.setAttribute("name", tmpId);
+                tmpinput2.setAttribute("type", "radio");
+                tmpinput2.setAttribute("onclick", "ethRadio(this)");
+                tmpinput2.setAttribute("value", i);
+                tmpinput2.setAttribute("textvalue", "U");
+                tmpinput2.setAttribute("checked","checked");
+                tmpinput2. setAttribute("fullvalue", ethPortSet[i] + "-U");
+                tmplabel2.appendChild(tmpinput2);
+                tmplabel2.append("U");
+                var tmplabel3 = document.createElement("label");
+                var tmpinput3 = document.createElement("input");
+                tmpinput3.setAttribute("name", tmpId);
+                tmpinput3.setAttribute("type", "radio");
+                tmpinput3.setAttribute("onclick", "ethRadio(this)");
+                tmpinput3.setAttribute("value", i);
+                tmpinput3.setAttribute("textvalue", "T");
+                tmpinput3. setAttribute("fullvalue", ethPortSet[i] + "-T");
+                tmplabel3.appendChild(tmpinput3);
+                tmplabel3.append("T");
+
 
                 tmpdiv.appendChild(tmplabel);
+                tmpdiv.appendChild(tmplabel2);
+                tmpdiv.appendChild(tmplabel3);
                 ethDiv.appendChild(tmpdiv);
             }
         }
@@ -388,8 +414,12 @@
         //eth
         function ethCheck(obj) {
             if (obj.checked) {
+                var tmpId = $(obj).attr("id");
                 selectedEthList.push(obj.value);
-                selectedEthNameList.push($(obj).attr("textValue"));
+                var tmpStr = $(obj).attr("textValue");
+                var textValue = $("input:radio[name=" + tmpId + "]:checked").attr("textValue");
+                tmpStr = tmpStr + "-" + textValue ;
+                selectedEthNameList.push(tmpStr.trim());
             } else {
                 for (var i = 0; i < selectedEthList.length; i++) {
                     if (selectedEthList[i] == obj.value) {
@@ -399,6 +429,16 @@
                 }
             }
             document.getElementById("selEthGroup").value = selectedEthNameList;
+        }
+        function ethRadio(obj) {
+            if (obj.checked) {
+                for (var i = 0; i < selectedEthList.length; i++) {
+                    if (selectedEthList[i] == obj.value) {
+                        selectedEthNameList[i] = $(obj).attr("fullvalue");
+                    }
+                }
+                document.getElementById("selEthGroup").value = selectedEthNameList;
+            }
         }
         //trunk
         function trunkCheck(obj) {
@@ -426,7 +466,8 @@
             if (ethGroup.trim() != "") {
                 selectedEthNameList = tmpList;
                 for (var i = 0; i < nCount; i++) {
-                    var tmpNum = ethPortSet.findIndex(value => value == tmpList[i]);
+                    var tmpStr = tmpList[i].substring(0,tmpList[i].length-2);
+                    var tmpNum = ethPortSet.findIndex(value => value == tmpStr);
                     selectedEthList.push(tmpNum);
                 }
             }
