--- a/interface/vlan.html
+++ b/interface/vlan.html
@@ -75,7 +75,7 @@
                 <tr>
                     <td id="row1" name="txtVlanName" value="1">trunk1</td>
                     <td>
-                        <span name="txtVlanId" value="100">100</span>
+                        <span name="txtVlanType" value="1">Static</span>
                     </td>
                     <td>
                         <span name="txtVlanDes" value="test vlan">test vlan</span>
@@ -99,7 +99,7 @@
                 <tr>
                     <td id="row2" name="txtVlanName" value="2">trunk2</td>
                     <td>
-                        <span name="txtVlanId" value="100">200</span>
+                        <span name="txtVlanType" value="2">Dynamic</span>
                     </td>
                     <td>
                         <span name="txtVlanDes" value="test vlan2">test vlan2</span>
@@ -134,11 +134,17 @@
                     <table class="table table-striped table-bordered">
                         <tbody>
                             <tr>
-                                <td>VLAN ID</td>
+                                <td><span id="txtName">VLAN 名称</span></td>
                                 <td>
                                     <input id="editVlanID" title="trunk输入框" type="text" placeholder="请输入vlan编号"
                                         style="width: 100%;">
                                     <span id="txtEditVlanID"></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>VLAN类型</td>
+                                <td>
+                                    <span id="txtEditVlanType"></span>
                                 </td>
                             </tr>
                             <tr>
@@ -206,6 +212,7 @@
     <div>
         <form id="hPostForm" style="display: none; visibility:hidden;" method="post" action="/goform/vlanFormPost">
             <input name="hId" value="" />
+            <input name="hType" value="" />
             <input name="hDes" value="" />
             <input name="hStatus" value="" />
             <input name="hEthGroup" value="" />
@@ -288,14 +295,14 @@
                 for (var i = 0; i < count; i++) {
                     html += ('<tr>');
                     html += ('<td id="row1" name="txtVlanName" value="' + pageDataSet[i][0] + '">' + pageDataSet[i][0] + '</td>');
-                    html += ('<td><span name="txtVlanId" value="' + pageDataSet[i][1] + '">' + typeArray[pageDataSet[i][1]] + '</span></td>');
+                    html += ('<td><span name="txtVlanType" value="' + pageDataSet[i][1] + '">' + typeArray[pageDataSet[i][1]] + '</span></td>');
                     html += ('<td><span name="txtVlanDes" value="' + pageDataSet[i][2] + '">' + pageDataSet[i][2] + '</span></td>');
                     html += ('<td><span name="txtVlanStatus" value="' + pageDataSet[i][3] + '">' + pageDataSet[i][3] + '</span></td>');
                     html += ('<td><span name="txtEthGroup" value="' + pageDataSet[i][4] + '">' + pageDataSet[i][4] + '</span></td>');
                     html += ('<td><span name="txtTrunkGroup" value="' + pageDataSet[i][5] + '">' + pageDataSet[i][5] + '</span></td>');
                     html += ('<td>');
                     html += ('<button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit" value="' + pageDataSet[i][1] + '">修改</button>');
-                    html += ('<button type="button" class="btn btn-primary" name="btnDelete" value="' + pageDataSet[i][1] + '">删除</button>');
+                    html += ('<button type="button" class="btn btn-primary" name="btnDelete" value="' + pageDataSet[i][0] + '">删除</button>');
                     html += ('</td>');
                     html += ('</tr>');
                 }
@@ -362,8 +369,8 @@
                 tmpinput2.setAttribute("onclick", "ethRadio(this)");
                 tmpinput2.setAttribute("value", i);
                 tmpinput2.setAttribute("textvalue", "U");
-                tmpinput2.setAttribute("checked","checked");
-                tmpinput2. setAttribute("fullvalue", ethPortSet[i] + "-U");
+                tmpinput2.setAttribute("checked", "checked");
+                tmpinput2.setAttribute("fullvalue", ethPortSet[i] + "-U");
                 tmplabel2.appendChild(tmpinput2);
                 tmplabel2.append("U");
                 var tmplabel3 = document.createElement("label");
@@ -373,7 +380,7 @@
                 tmpinput3.setAttribute("onclick", "ethRadio(this)");
                 tmpinput3.setAttribute("value", i);
                 tmpinput3.setAttribute("textvalue", "T");
-                tmpinput3. setAttribute("fullvalue", ethPortSet[i] + "-T");
+                tmpinput3.setAttribute("fullvalue", ethPortSet[i] + "-T");
                 tmplabel3.appendChild(tmpinput3);
                 tmplabel3.append("T");
 
@@ -418,7 +425,7 @@
                 selectedEthList.push(obj.value);
                 var tmpStr = $(obj).attr("textValue");
                 var textValue = $("input:radio[name=" + tmpId + "]:checked").attr("textValue");
-                tmpStr = tmpStr + "-" + textValue ;
+                tmpStr = tmpStr + "-" + textValue;
                 selectedEthNameList.push(tmpStr.trim());
             } else {
                 for (var i = 0; i < selectedEthList.length; i++) {
@@ -466,7 +473,7 @@
             if (ethGroup.trim() != "") {
                 selectedEthNameList = tmpList;
                 for (var i = 0; i < nCount; i++) {
-                    var tmpStr = tmpList[i].substring(0,tmpList[i].length-2);
+                    var tmpStr = tmpList[i].substring(0, tmpList[i].length - 2);
                     var tmpNum = ethPortSet.findIndex(value => value == tmpStr);
                     selectedEthList.push(tmpNum);
                 }
@@ -510,24 +517,36 @@
         $("#btnCreate").click(function () {
             isCreateNew = true;
             $("#myModalLabel").html("新建");
+            $("#txtName").html("VLAN ID");
             //清空赋值
             $("#editVlanID").val("").attr("style", "width:100%;");
-            $("#txtEditVlanID").html("").attr("style", "display:none");;
+            $("#txtEditVlanID").html("").attr("style", "display:none");
+            $("#txtEditVlanType").val(1).html(typeArray[1]);
+            $("#editVlanDes").val("");
+            $("#selEthGroup").val("");
+            $("#selTrunkGroup").val("");
             //重置复选框状态
+            resetEthDropDown("");
+            resetTrunkDropDown("");
             $("#myModal").modal('show');
         });
         //行点击 修改
         $("#tBody").on('click', '[name="btnEdit"]', function () {
+            isCreateNew = false;
             $("#myModalLabel").html("修改");
+            $("#txtName").html("VLAN名称");
             //取值
-            var vlanId = $(this).parents("tr").find("[name='txtVlanId']").attr("value");
+            var vlanName = $(this).parents("tr").find("[name='txtVlanName']").attr("value");
+            var vlanId = vlanName.substring(4);
+            var vlanType =$(this).parents("tr").find("[name='txtVlanType']").attr("value");
             var vlanDes = $(this).parents("tr").find("[name='txtVlanDes']").attr("value");
             var vlanStatus = $(this).parents("tr").find("[name='txtVlanStatus']").attr("value");
             var ethGroup = $(this).parents("tr").find("[name='txtEthGroup']").attr("value");
             var trunkGroup = $(this).parents("tr").find("[name='txtTrunkGroup']").attr("value");
             //赋值
             $("#editVlanID").val(vlanId).attr("style", "width:100%;display:none");
-            $("#txtEditVlanID").html(vlanId).removeAttr("style");
+            $("#txtEditVlanID").html(vlanName).removeAttr("style");
+            $("#txtEditVlanType").attr("value",vlanType).html(typeArray[vlanType]);
             $("#editVlanDes").val(vlanDes);
             $("#editStatus").val(vlanStatus);
             $("#selEthGroup").val(ethGroup);
@@ -538,13 +557,15 @@
         });
         //行点击 删除
         $("#tBody").on('click', '[name="btnDelete"]', function () {
-            var deleteId = $(this).attr("value")
-            alert(deleteId);
+            var deleteId = $(this).attr("value");
+            $("[name='hId']").val(deleteId);
+            $("#hDeleteForm").submit();
         });
         //
         $("#btnSave").click(function () {
             var vlanId = $("#editVlanID").val().trim();
             var vlanDes = $("#editVlanDes").val();
+            var vlanType =$("#txtEditVlanType").attr("value");
             var vlanStatus = $("#editStatus").val();
             var ethGroup = $("#selEthGroup").val().trim();
             var trunkGroup = $("#selTrunkGroup").val().trim();
@@ -552,8 +573,9 @@
             if (!checkData(vlanId, vlanDes, vlanStatus, ethGroup, trunkGroup)) {
                 return;
             }
-            $("[name='hId']").val(vlanId);
+            $("[name='hId']").val("valn"+vlanId);
             $("[name='hDes']").val(vlanDes);
+            $("[name='hType']").val(vlanType);
             $("[name='hStatus']").val(vlanStatus);
             $("[name='hEthGroup']").val(ethGroup);
             $("[name='hTrunkGroup']").val(trunkGroup);
