调试流程走通

--- a/interface/vlan.html
+++ b/interface/vlan.html
@@ -412,8 +412,32 @@
                 tmplabel.setAttribute("name", "trunkChecklabel");
                 tmplabel.innerHTML = trunkSet[i];
                 tmplabel.setAttribute("class", "mark");
+                //加载单选框
+                var tmplabel2 = document.createElement("label");
+                var tmpinput2 = document.createElement("input");
+                tmpinput2.setAttribute("name", tmpId);
+                tmpinput2.setAttribute("type", "radio");
+                tmpinput2.setAttribute("onclick", "trunkRadio(this)");
+                tmpinput2.setAttribute("value", i);
+                tmpinput2.setAttribute("textvalue", "U");
+                tmpinput2.setAttribute("checked", "checked");
+                tmpinput2.setAttribute("fullvalue", trunkSet[i] + "-U");
+                tmplabel2.appendChild(tmpinput2);
+                tmplabel2.append("U");
+                var tmplabel3 = document.createElement("label");
+                var tmpinput3 = document.createElement("input");
+                tmpinput3.setAttribute("name", tmpId);
+                tmpinput3.setAttribute("type", "radio");
+                tmpinput3.setAttribute("onclick", "trunkRadio(this)");
+                tmpinput3.setAttribute("value", i);
+                tmpinput3.setAttribute("textvalue", "T");
+                tmpinput3.setAttribute("fullvalue", trunkSet[i] + "-T");
+                tmplabel3.appendChild(tmpinput3);
+                tmplabel3.append("T");
 
                 tmpdiv.appendChild(tmplabel);
+                tmpdiv.appendChild(tmplabel2);
+                tmpdiv.appendChild(tmplabel3);
                 trunkDIv.appendChild(tmpdiv);
             }
         }
@@ -450,8 +474,12 @@
         //trunk
         function trunkCheck(obj) {
             if (obj.checked) {
+                var tmpId = $(obj).attr("id");
                 selectedTrunkList.push(obj.value);
-                selectedTrunkNameList.push($(obj).attr("textValue"));
+                var tmpStr = $(obj).attr("textValue");
+                var textValue = $("input:radio[name=" + tmpId + "]:checked").attr("textValue");
+                tmpStr = tmpStr + "-" + textValue;
+                selectedTrunkNameList.push(tmpStr.trim());
             } else {
                 for (var i = 0; i < selectedTrunkList.length; i++) {
                     if (selectedTrunkList[i] == obj.value) {
@@ -461,6 +489,16 @@
                 }
             }
             document.getElementById("selTrunkGroup").value = selectedTrunkNameList;
+        }
+        function trunkRadio(obj){
+            if (obj.checked) {
+                for (var i = 0; i < selectedTrunkList.length; i++) {
+                    if (selectedTrunkList[i] == obj.value) {
+                        selectedTrunkNameList[i] = $(obj).attr("fullvalue");
+                    }
+                }
+                document.getElementById("selTrunkGroup").value = selectedTrunkNameList;
+            }
         }
         //
         function resetEthDropDown(ethGroup) {
@@ -473,6 +511,7 @@
             if (ethGroup.trim() != "") {
                 selectedEthNameList = tmpList;
                 for (var i = 0; i < nCount; i++) {
+                    //去除尾部的—T -U
                     var tmpStr = tmpList[i].substring(0, tmpList[i].length - 2);
                     var tmpNum = ethPortSet.findIndex(value => value == tmpStr);
                     selectedEthList.push(tmpNum);
@@ -496,7 +535,9 @@
             if (trunkGroup.trim() != "") {
                 selectedTrunkNameList = tmpList;
                 for (var i = 0; i < nCount; i++) {
-                    var tmpNum = trunkSet.findIndex(value => value == tmpList[i]);
+                    var tmpStr = tmpList[i].substring(0, tmpList[i].length - 2);
+                    var tmpNum = trunkSet.findIndex(value => value == tmpStr);
+                    debugger;
                     selectedTrunkList.push(tmpNum);
                 }
             }
